[gd_scene load_steps=9 format=3 uid="uid://6o55i8gc5jio"]

[ext_resource type="Script" path="res://scripts/crate.gd" id="1_pyr3b"]
[ext_resource type="Texture2D" uid="uid://dhid5aq75ntmj" path="res://art/Sprites/Interactables/Crate-animated.png" id="1_x13g0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_re3ox"]
size = Vector2(16, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_6jo2v"]
radius = 11.0454

[sub_resource type="Animation" id="Animation_iujgq"]
resource_name = "Active"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3hjlu"]
resource_name = "Destroyed"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_i4c5b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_31ibr"]
_data = {
"Active": SubResource("Animation_iujgq"),
"Destroyed": SubResource("Animation_3hjlu"),
"RESET": SubResource("Animation_i4c5b")
}

[node name="crate" type="StaticBody2D"]
collision_layer = 2
script = ExtResource("1_pyr3b")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_x13g0")
hframes = 11
frame = 10

[node name="crate_collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_re3ox")
debug_color = Color(0.309495, 0.522935, 0.90932, 0.42)

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="hitbox_collider" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_6jo2v")
debug_color = Color(0.614731, 0.416218, 0.870964, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_31ibr")
}
autoplay = "Active"

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
